--- a/plugin.xml
+++ b/plugin.xml
@@ -10,7 +10,7 @@
 </engines>
 
     <js-module src="www/logcat.js" name="LogCat">
-    <clobbers target="plugin.logcat" />
+    <clobbers target="LogWriter" />
   </js-module>
 
   <!-- android -->
@@ -26,9 +26,6 @@
     
     <!-- ios -->
 <platform name="ios">
-    <info>
-open xcode go into settings change `deployment target` to 7.0 or above and add `[Project Name]/Plugins/com.example.hello/Bridging-Header.h` to Objective-c Bridging Header under the Swift Compiler - Code Generation options      
-    </info>
     <config-file target="config.xml" parent="/*">
       <feature name="LogCat">
         <param name="ios-package" value="LogCat"/>
